vpc.yml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Template for basic EC2 setup

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/24
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: main

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: main-igw

  VPCtoIGW:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW
      VpcId: !Ref VPC

  NetworkAcl:
    Type: AWS::EC2::NetworkAcl
    Properties:
      Tags:
        - Key: Name
          Value: main-nacl
      VpcId: !Ref VPC

  InboundSSHACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 22
        To: 22
      Protocol: 6
      RuleAction: allow
      RuleNumber: 100

  InboundHTTPACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 80
        To: 80
      Protocol: 6
      RuleAction: allow
      RuleNumber: 101

  InboundHTTPSACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 443
        To: 443
      Protocol: 6
      RuleAction: allow
      RuleNumber: 102

  InboundMinecraft1ACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 25565
        To: 25576
      Protocol: 6
      RuleAction: allow
      RuleNumber: 103

  InboundRepliesACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: false
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 140

  OutboundSSHACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 22
        To: 22
      Protocol: 6
      RuleAction: allow
      RuleNumber: 101

  OutboundHTTPACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 80
        To: 80
      Protocol: 6
      RuleAction: allow
      RuleNumber: 102

  OutboundHTTPSACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 443
        To: 443
      Protocol: 6
      RuleAction: allow
      RuleNumber: 103

  OutbountRepliesACL:
    Type: AWS::EC2::NetworkAclEntry
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: true
      NetworkAclId: !Ref NetworkAcl
      PortRange:
        From: 1024
        To: 65535
      Protocol: 6
      RuleAction: allow
      RuleNumber: 140

  SSHSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH Traffic
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      Tags:
        - Key: Name
          Value: SSHSG
      VpcId: !Ref VPC

  WebSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow web traffic
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: WebSG
      VpcId: !Ref VPC

  MinecraftSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow minecraft traffic
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 25565
          IpProtocol: tcp
          ToPort: 25566
        - CidrIp: 0.0.0.0/0
          FromPort: 25575
          IpProtocol: tcp
          ToPort: 25576
      Tags:
        - Key: Name
          Value: MinecraftSG
      VpcId: !Ref VPC

Outputs:
  VPC:
    Description: VPC Id
    Value: !Ref VPC
    Export:
      Name: main-vpc-id

  IGW:
    Description: Main IGW for internet access
    Value: !Ref IGW
    Export:
      Name: main-igw

  SSHSG:
    Description: SSH security group
    Value: !Ref SSHSG
    Export:
      Name: main-sshsg

  WebSG:
    Description: Web security group
    Value: !Ref WebSG
    Export:
      Name: main-websg

  MinecraftSG:
    Description: Minecraft security group
    Value: !Ref MinecraftSG
    Export:
      Name: main-minecraftsg

  NACL:
    Description: Network ACL for all subnets
    Value: !Ref NetworkAcl
    Export:
      Name: main-nacl
